<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyBingWallpaperByNA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="set_wallpaper_button">Set as Wallpaper</string>
    <string name="fetch_button">Fetch current Wallpaper</string>
	<string name="imageview_description">Showcase of the most recent wallpaper in the memory</string>
	<string name="copyright">Copyright</string>
	<string name="date">Date</string>
</resources>
